pembaharuan pada web

--- a/project.html
+++ b/project.html
@@ -37,8 +37,8 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> More </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="#project">Project</a></li>
-                <li><a class="dropdown-item" href="galery.html #galery">Galery</a></li>
-                <li><a class="dropdown-item" href="#">Student</a></li>
+                <li><a class="dropdown-item" href="galery.html">Galery</a></li>
+                <li><a class="dropdown-item" href="student.html">Student</a></li>
               </ul>
             </li>
           </ul>
@@ -72,7 +72,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb3">
+          <div class="col-md-4 mb-3">
             <div class="card">
               <img src="img/download.jpg" class="card-img-top" alt="3" />
               <div class="card-body">
@@ -80,7 +80,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb3">
+          <div class="col-md-4 mb-3">
             <div class="card">
               <img src="img/Topologi-Jaringan-Komputer.jpg" class="card-img-top" alt="4" />
               <div class="card-body">
@@ -96,7 +96,7 @@
 
     <!-- Footer -->
     <footer class="text-white pb-1 text-center" style="background-color: #212237">
-      <p class="fs-6 fw-light">Created by <a href="https://www.instagram.com/_cyrf__/?igshid=YmMyMTA2M2Y%3D" class="text-white">Ciesha Fajar Ramadhan</a></p>
+      <p class="fs-6 fw-light">Created by <a href="https://www.instagram.com/_cyrf__/?igshid=YmMyMTA2M2Y%3D" class="text-white">CYRF</a></p>
     </footer>
     <!-- Akhir Footer -->
 
