--- a/galery.html
+++ b/galery.html
@@ -8,6 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
+    <!-- aos -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- aksihr aos -->
+
     <!-- My CSS -->
     <link rel="stylesheet" href="galery2.css" />
     <!-- Akhir CSS -->
@@ -38,7 +42,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="project.html">Project</a></li>
                 <li><a class="dropdown-item" href="galery.html">Galery</a></li>
-                <li><a class="dropdown-item" href="#">Student</a></li>
+                <li><a class="dropdown-item" href="student.html">Student</a></li>
               </ul>
             </li>
           </ul>
@@ -51,8 +55,8 @@
     <section id="galery">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col mt-3">
-            <h2>Galery</h2>
+          <div class="col mt-4">
+            <h2>WELCOME TO GALERY TKJ 2</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -67,37 +71,37 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="img4l/IMG-20220819-WA0013.jpg" class="d-block w-100" alt="..." />
+                  <img src="img4l/IMG-20220819-WA0013.jpg" class="d-block w-100" alt="1" />
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
+                    <h5>Foto bersama</h5>
                     <p>Some representative placeholder content for the first slide.</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="img4l/IMG-20220819-WA0017.jpg" class="d-block w-100" alt="..." />
+                  <img src="img4l/IMG-20220819-WA0017.jpg" class="d-block w-100" alt="2" />
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
+                    <h5>Foto bersama</h5>
                     <p>Some representative placeholder content for the second slide.</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="img4l/IMG-20220819-WA0018.jpg" class="d-block w-100" alt="..." />
+                  <img src="img4l/IMG-20220819-WA0018.jpg" class="d-block w-100" alt="3" />
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
+                    <h5>Foto bersama</h5>
                     <p>Some representative placeholder content for the third slide.</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="img4l/IMG-20220819-WA0019.jpg" class="d-block w-100" alt="..." />
+                  <img src="img4l/IMG-20220819-WA0019.jpg" class="d-block w-100" alt="4" />
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
+                    <h5>Foto bersama</h5>
                     <p>Some representative placeholder content for the third slide.</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="img4l/IMG-20220819-WA0020.jpg" class="d-block w-100" alt="..." />
+                  <img src="img4l/IMG-20220819-WA0020.jpg" class="d-block w-100" alt="5" />
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
+                    <h5>Foto bersama</h5>
                     <p>Some representative placeholder content for the third slide.</p>
                   </div>
                 </div>
@@ -114,16 +118,131 @@
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#212237" fill-opacity="1" d="M0,96L288,256L576,288L864,192L1152,256L1440,64L1440,320L1152,320L864,320L576,320L288,320L0,320Z"></path></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,128L288,192L576,64L864,288L1152,128L1440,64L1440,320L1152,320L864,320L576,320L288,320L0,320Z"></path></svg>
     </section>
     <!-- Akhir galery -->
 
+    <!-- Pengajian -->
+    <section id="pengajian">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col mt-3">
+            <h3>Pengajian</h3>
+          </div>
+        </div>
+        <div class="row justify-content-evenly">
+          <div class="col-md-4 mb-3" data-aos="zoom-in-up" data-aos-offset="300" data-aos-duration="2000" data-aos-delay="100">
+            <div class="card text-white bg-dark">
+              <img src="img5p/IMG-20220820-WA0036.jpg" class="card-img-top" alt="1" />
+              <div class="card-body">
+                <p class="card-text"></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3" data-aos="zoom-in-up" data-aos-offset="300" data-aos-duration="2000" data-aos-delay="200">
+            <div class="card text-white bg-dark">
+              <img src="img5p/IMG-20220820-WA0035.jpg" class="card-img-top" alt="2" />
+              <div class="card-body">
+                <p class="card-text"></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3" data-aos="zoom-in-up" data-aos-offset="300" data-aos-duration="2000" data-aos-delay="300">
+            <div class="card text-white bg-dark">
+              <img src="img5p/IMG-20220820-WA0031.jpg" class="card-img-top" alt="3" />
+              <div class="card-body">
+                <p class="card-text"></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3" data-aos="zoom-in-up" data-aos-offset="100" data-aos-duration="2000" data-aos-delay="400">
+            <div class="card text-white bg-dark">
+              <img src="img5p/IMG-20220820-WA0024.jpg" class="card-img-top" alt="4" />
+              <div class="card-body">
+                <p class="card-text"></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3" data-aos="zoom-in-up" data-aos-offset="100" data-aos-duration="2000" data-aos-delay="500">
+            <div class="card text-white bg-dark">
+              <img src="img5p/IMG-20220820-WA0030.jpg" class="card-img-top" alt="5" />
+              <div class="card-body">
+                <p class="card-text"></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3" data-aos="zoom-in-up" data-aos-offset="100" data-aos-duration="2000" data-aos-delay="600">
+            <div class="card text-white bg-dark">
+              <img src="img5p/IMG-20220820-WA0025.jpg" class="card-img-top" alt="6" />
+              <div class="card-body">
+                <p class="card-text"></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#e8e8eb" fill-opacity="1" d="M0,96L288,224L576,160L864,256L1152,320L1440,64L1440,320L1152,320L864,320L576,320L288,320L0,320Z"></path></svg>
+    </section>
+    <!-- Akhir Pengajian -->
+
+    <!-- Random -->
+    <section id="random">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col mt-3">
+            <h3>Random Picture</h3>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-4 mb-3" data-aos="flip-down" data-aos-offset="200" data-aos-duration="2000">
+            <div class="card bg-dark text-white">
+              <img src="img3r/IMG-20220801-WA0011.jpg" class="card-img" alt="1" />
+              <div class="card-img-overlay">
+                <p class="card-text"></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3" data-aos="flip-down" data-aos-offset="200" data-aos-duration="2000" data-aos-delay="100">
+            <div class="card bg-dark text-white">
+              <img src="img3r/IMG-20220826-WA0011.jpg" class="card-img" alt="2" />
+              <div class="card-img-overlay">
+                <p class="card-text"></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3" data-aos="flip-down" data-aos-offset="200" data-aos-duration="2000" data-aos-delay="200">
+            <div class="card bg-dark text-white">
+              <img src="img3r/IMG-20220828-WA0025.jpg" class="card-img" alt="3" />
+              <div class="card-img-overlay">
+                <p class="card-text"></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3" data-aos="flip-down" data-aos-offset="200" data-aos-duration="2000" data-aos-delay="300">
+            <div class="card bg-dark text-white">
+              <img src="img3r/IMG-20220902-WA0029.jpg" class="card-img" alt="4" />
+              <div class="card-img-overlay">
+                <p class="card-text"></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#212237" fill-opacity="1" d="M0,96L288,256L576,288L864,192L1152,256L1440,64L1440,320L1152,320L864,320L576,320L288,320L0,320Z"></path></svg>
+    </section>
+    <!-- Akhir Random -->
+
     <!-- Footer -->
     <footer class="text-white pb-1 text-center" style="background-color: #212237">
-      <p class="fs-6 fw-light">Created by <a href="https://www.instagram.com/_cyrf__/?igshid=YmMyMTA2M2Y%3D" class="text-white">Ciesha Fajar Ramadhan</a></p>
+      <p class="fs-6 fw-light">Created by <a href="https://www.instagram.com/_cyrf__/?igshid=YmMyMTA2M2Y%3D" class="text-white">CYRF</a></p>
     </footer>
     <!-- Akhir Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
