--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
+    <!-- aos -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- akhir aos -->
+
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
     <!-- Akhir CSS -->
@@ -49,6 +53,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
+      <marquee class="text-1 mt-1">This website was created as a form of documentation. <a href="smkkemalabhayangkaridelog.sch.id" class="text-dark"> THIS IS THE SCHOOL WE LEARN</a></marquee>
       <img src="img2/large.png" alt="sluyy" width="200" class="img-thumbnail" />
       <h1 class="display-4">WELCOME TO TEKNIK KOMPUTER AND JARINGAN</h1>
       <p class="lead">web khusus XI TKJ 2</p>
@@ -65,10 +70,10 @@
           </div>
         </div>
         <div class="row justify-content-around fs-5 text-center">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right" data-aos-offset="200" data-aos-duration="2000">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, tenetur veritatis! Mollitia, fugiat consequatur. Sed at voluptate animi natus corrupti!</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-left" data-aos-offset="200" data-aos-duration="3000" data-aos-delay="400">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum quas, sunt maiores veritatis, necessitatibus ullam et quis eligendi fuga rerum recusandae dicta reprehenderit magni eius!</p>
           </div>
         </div>
@@ -86,21 +91,29 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-5">
-            <form>
+          <div class="col-md-6">
+            <div class="alert alert-success alert-dismissible fade show d-none" role="alert">
+              <strong>Terimakasih!</strong> Pesan anda sudah kami terima.
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <form name="wtkj-contact-form">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" />
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" />
+                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
               </div>
               <div class="mb-3">
                 <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3"></textarea>
+                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary btn-kirim">Submit</button>
+              <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
             </form>
           </div>
         </div>
@@ -111,10 +124,43 @@
 
     <!-- Footer -->
     <footer class="text-white pb-1 text-center" style="background-color: #212237">
-      <p class="fs-6 fw-light">Created by <a href="https://www.instagram.com/_cyrf__/?igshid=YmMyMTA2M2Y%3D" class="text-white">Ciesha Fajar Ramadhan</a></p>
+      <p class="fs-6 fw-light">Created by <a href="https://www.instagram.com/_cyrf__/?igshid=YmMyMTA2M2Y%3D" class="text-white">CYRF</a></p>
     </footer>
     <!-- Akhir Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+
+    <script>
+      const scriptURL = "https://script.google.com/macros/s/AKfycbwFrB4HO55rxGshWYlnX0YzKv5nmVhYb0z723bOb3tLLvBbXlCSMMy6jWSr5KbPRYhG/exec";
+      const form = document.forms["wtkj-contact-form"];
+      const btnkirim = document.querySelector(".btn-kirim");
+      const btnloading = document.querySelector(".btn-loading");
+      const myAlert = document.querySelector(".alert");
+
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        // ketika tombol submit diklik
+        // tampilkan tombol loading, hilangkan tombol kirim
+        btnloading.classList.toggle("d-none");
+        btnkirim.classList.toggle("d-none");
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            // tampilkan tombol kirim, hilangkan tombol loading
+            btnloading.classList.toggle("d-none");
+            btnkirim.classList.toggle("d-none");
+            // tampilkan alert
+            myAlert.classList.toggle("d-none");
+            //reset form
+            form.reset();
+            console.log("Success!", response);
+          })
+          .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
   </body>
 </html>
